# RegiSphere

./: index.html
Coral-Agents/Coral-FirecrawlMCP-Agent/: .gitignore  coral-agent.toml  main.py
Coral-Agents/Coral-Interface-Agent/: coral-agent.toml  main.py  pyproject.toml  test.py
Coral-Agents/Coral-Interface-Agent/utils/: coral_config.py
Coral-Agents/Coral-OpenDeepResearch-Agent/: .gitignore  coral-agent.toml  main.py  odr.py  pyproject.toml
Coral-Agents/Coral-OpenDeepResearch-Agent/open_deep_research/: multi_agent.py
Coral-Agents/Coral-OpenDeepResearch-Agent/temp/: report.txt
Coral-Agents/Coral-RepoUnderstanding-Agent/: .env.example  Dockerfile  README.md  coral-agent.toml  main.py  pyproject.toml  run_agent.ps1
backend/: .env.example  README.md  main.py  requirements.txt
backend/config/: agent_config.py
backend/models/: project.py
backend/services/: agent_service.py  coral_service.py
backend/session/: data.json
coral-server/: .gitignore
coral-server-v1/: .gitignore  build.gradle.kts  configenv.txt
coral-server-v1/examples/camel-resources/: camel-interface-resource.py
coral-server-v1/examples/camel-search-maths/: mcp_example_camel_github.py
coral-studio/: .gitignore
coral-studio-latest/: .gitignore
css/: styles.css
js/: script.js
pages/: dashboard.html
ui/: index.html  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.tsx  index.css
ui/src/components/: ComplianceNews.tsx  Header.tsx  HowItWorks.tsx  Landing.tsx  Pipeline.tsx  RecentProjects.tsx  Report.tsx  Sidebar.tsx  UploadForm.tsx  WhyItMatters.tsx
(+18 files in other folders)
